--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "next": "15.5.2",
+    "@google-cloud/storage": "^7.7.0",
+    "@google-cloud/speech": "^6.4.0",
+    "pg": "^8.11.3",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/pg": "^8.10.9",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^9.0.7",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
